# r_adb_mcp_server

./: .gitignore  PUBLISH.md  README.md  pyproject.toml
src/adb_mcp_server/: __init__.py  server.py
