[project]
name = "r-adb-mcp-server"
version = "0.1.3"
description = "Enhanced ADB MCP Server for Flutter/Android Development - 60+ tools for UI testing, debugging, and visual QA"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Rahul K R", email = "rahulandkr555@gmail.com"}
]
keywords = [
    "mcp",
    "adb",
    "android",
    "flutter",
    "testing",
    "automation",
    "ui-testing",
    "model-context-protocol"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/rahulkr/r_adb_mcp_server"
Repository = "https://github.com/rahulkr/r_adb_mcp_server"
Issues = "https://github.com/rahulkr/r_adb_mcp_server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adb_mcp_server"]

[project.scripts]
r-adb-mcp-server = "adb_mcp_server:main"
